tests/ui/borrowck/borrowck-vec-pattern-move-tail.stderr
error[E0506]: cannot assign to `a[_]` because it is borrowed
  --> $DIR/borrowck-vec-pattern-move-tail.rs:8:5
   |
LL |         [1, 2, ref tail @ ..] => tail,
   |                -------- `a[_]` is borrowed here
...
LL |     a[2] = 0;
   |     ^^^^^^^^ `a[_]` is assigned to here but it was already borrowed
LL |     println!("t[0]: {}", t[0]);
   |                          ---- borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
